Begin creation of UI

--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>HTML/CSS/JS Template Project!</title>
+  <title>Super Galactic Age Calculator!</title>
 </head>
 <body>
-  <h1>Sample form to test functionality:</h1>
+  <h1>Perform Galactic Age Calculations:</h1>
 
-  <form id="sample-form">
-    <label for="text-input">Enter a number:</label>
-    <input id="text-input" type="text">
-    <button type="submit">Submit</button>
-  </form>
+  <div id="formHolder">
+    <form id="enterAgeForm">
+      <label for="age-input">Enter your age to get started:</label>
+      <input id="age-input" type="number">
+      <button type="submit">Submit</button>
+    </form>
+  </div>
 
-  <img src="./assets/images/hanny-naibaho--Go4DH2pZbc-unsplash.jpg" alt="such a pup!"/>
+  <div id="planetHolder"></div>
 
-  <div id="outputDiv"></div>
 </body>
 </html>
