Add secondary forms toggle option

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,24 @@
       <input id="age-input" type="number">
       <button type="submit">Submit</button>
     </form>
+
+    <div id="manipulationFormsHolder" class="hidden">
+      <form id="yearsSinceForm">
+        <h4>Determine how many years have passed on each planet since a past birthday!</h4>
+        <label for="yearsSinceInput"><em>Enter a prior age:</em></label>
+        <input id="yearsSinceInput" type="number">
+        <button type="submit">Calculate</button>
+      </form>
+      <br><br>
+      <form id="yearsToForm">
+        <h4>Determine how many years have yet to pass on each planet until a future birthday!</h4>
+        <label for="yearsSinceInput"><em>Enter a future age:</em></label>
+        <input id="yearsSinceInput" type="number">
+        <button type="submit">Calculate</button>
+      </form>
+
+      </firm>
+    </div>
   </div>
 
   <div id="planetHolder"></div>
