Add planets and planet gifs

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,28 @@
     </div>
   </div>
 
-  <div id="planetHolder"></div>
+  <div id="planetHolder">
+    <div id="mercuryDiv">
+      <img src="assets/images/mercury.gif" alt="Mercury gif">
+    </div>
+
+    <div id="venusDiv">
+      <img src="assets/images/venus.gif" alt="Venus gif">
+    </div>
+
+    <div id="planetEarthDiv">
+      <img src="assets/images/earth.gif" alt="Earth gif">
+    </div>
+
+    <div id="planetMarsDiv">
+      <img src="assets/images/mars.gif" alt="Mars gif">
+    </div>
+
+    <div id="planetJupiterDiv">
+      <img src="assets/images/jupiter.gif" alt="Jupiter gif">
+    </div>
+
+  </div>
 
 </body>
 </html>
