WIP commit while styling planets

--- a/src/index.html
+++ b/src/index.html
@@ -32,25 +32,25 @@
     </div>
   </div>
 
-  <div id="planetHolder">
-    <div id="mercuryDiv">
-      <img src="assets/images/mercury.gif" alt="Mercury gif">
+  <div id="planetsHolder">
+    <div id="mercuryDiv" class="planetHolder">
+      <img src="assets/images/mercury.gif" alt="Mercury gif" class="planetGIF">
     </div>
 
-    <div id="venusDiv">
-      <img src="assets/images/venus.gif" alt="Venus gif">
+    <div id="venusDiv" class="planetHolder">
+      <img src="assets/images/venus.gif" alt="Venus gif" class="planetGIF">
     </div>
 
-    <div id="planetEarthDiv">
-      <img src="assets/images/earth.gif" alt="Earth gif">
+    <div id="planetEarthDiv" class="planetHolder">
+      <img src="assets/images/earth.gif" alt="Earth gif" class="planetGIF">
     </div>
 
-    <div id="planetMarsDiv">
-      <img src="assets/images/mars.gif" alt="Mars gif">
+    <div id="planetMarsDiv" class="planetHolder">
+      <img src="assets/images/mars.gif" alt="Mars gif" class="planetGIF">
     </div>
 
-    <div id="planetJupiterDiv">
-      <img src="assets/images/jupiter.gif" alt="Jupiter gif">
+    <div id="planetJupiterDiv" class="planetHolder">
+      <img src="assets/images/jupiter.gif" alt="Jupiter gif" class="planetGIF">
     </div>
 
   </div>
