--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-  
+
   <div id="formHolder">
     <h1>Perform Galactic Age Calculations:</h1>
     <form id="enterAgeForm">
@@ -22,13 +22,21 @@
         <label for="yearsSinceInput"><em>Enter a prior age:</em></label>
         <input id="yearsSinceInput" type="number">
         <button type="submit">Calculate</button>
+        <div id="yearsSinceFormError" class="hidden">
+          <br>
+          <p>Invalid input. Prior birthday can't be larger than your current age.</p>
+        </div>
       </form>
       <br><br>
       <form id="yearsToForm">
         <h4>Determine how many years have yet to pass on each planet until a future birthday!</h4>
-        <label for="yearsSinceInput"><em>Enter a future age:</em></label>
-        <input id="yearsSinceInput" type="number">
+        <label for="yearsToInput"><em>Enter a future age:</em></label>
+        <input id="yearsToInput" type="number">
         <button type="submit">Calculate</button>
+        <div id="yearsToFormError" class="hidden">
+          <br>
+          <p>Invalid input. Future age must be larger than your current age.</p>
+        </div>
       </form>
     </div>
   </div>
@@ -40,30 +48,40 @@
       <img src="assets/images/mercury.gif" alt="Mercury gif" class="planetGIF">
       <h3 class="planetTitle">Mercury</h3>
       <p id="mercuryTextHolder"></p>
+      <p id="mercuryYearsSinceResult"></p>
+      <p id="mercuryYearsToResult"></p>
     </div>
 
     <div id="venusDiv" class="planetHolder">
       <img src="assets/images/venus.gif" alt="Venus gif" class="planetGIF">
       <h3 class="planetTitle">Venus</h3>
       <p id="venusTextHolder"></p>
+      <p id="venusYearsSinceResult"></p>
+      <p id="venusYearsToResult"></p>
     </div>
 
     <div id="planetEarthDiv" class="planetHolder">
       <img src="assets/images/earth.gif" alt="Earth gif" class="planetGIF">
       <h3 class="planetTitle">Earth</h3>
       <p id="earthTextHolder"></p>
+      <p id="earthYearsSinceResult"></p>
+      <p id="earthYearsToResult"></p>
     </div>
 
     <div id="planetMarsDiv" class="planetHolder">
       <img src="assets/images/mars.gif" alt="Mars gif" class="planetGIF">
       <h3 class="planetTitle">Mars</h3>
       <p id="marsTextHolder"></p>
+      <p id="marsYearsSinceResult"></p>
+      <p id="marsYearsToResult"></p>
     </div>
 
     <div id="planetJupiterDiv" class="planetHolder">
       <img src="assets/images/jupiter.gif" alt="Jupiter gif" class="planetGIF">
       <h3 class="planetTitle">Jupiter</h3>
       <p id="jupiterTextHolder"></p>
+      <p id="jupiterYearsSinceResult"></p>
+      <p id="jupiterYearsToResult"></p>
     </div>
 
   </div>
