Add GUI for yearsTil function. Revise error messages

--- a/src/index.html
+++ b/src/index.html
@@ -24,18 +24,18 @@
         <button type="submit">Calculate</button>
         <div id="yearsSinceFormError" class="hidden">
           <br>
-          <p>Invalid input. Prior birthday can't be larger than your current age.</p>
+          <p>Invalid input. Prior birthday can't be larger than or equal to your current age.</p>
         </div>
       </form>
       <br><br>
-      <form id="yearsToForm">
+      <form id="yearsTilForm">
         <h4>Determine how many years have yet to pass on each planet until a future birthday!</h4>
-        <label for="yearsToInput"><em>Enter a future age:</em></label>
-        <input id="yearsToInput" type="number">
+        <label for="yearsTilInput"><em>Enter a future age:</em></label>
+        <input id="yearsTilInput" type="number">
         <button type="submit">Calculate</button>
-        <div id="yearsToFormError" class="hidden">
+        <div id="yearsTilFormError" class="hidden">
           <br>
-          <p>Invalid input. Future age must be larger than your current age.</p>
+          <p>Invalid input. Future age must be larger than or equal to your current age.</p>
         </div>
       </form>
     </div>
@@ -49,7 +49,7 @@
       <h3 class="planetTitle">Mercury</h3>
       <p id="mercuryTextHolder"></p>
       <p id="mercuryYearsSinceResult"></p>
-      <p id="mercuryYearsToResult"></p>
+      <p id="mercuryYearsTilResult"></p>
     </div>
 
     <div id="venusDiv" class="planetHolder">
@@ -57,7 +57,7 @@
       <h3 class="planetTitle">Venus</h3>
       <p id="venusTextHolder"></p>
       <p id="venusYearsSinceResult"></p>
-      <p id="venusYearsToResult"></p>
+      <p id="venusYearsTilResult"></p>
     </div>
 
     <div id="planetEarthDiv" class="planetHolder">
@@ -65,7 +65,7 @@
       <h3 class="planetTitle">Earth</h3>
       <p id="earthTextHolder"></p>
       <p id="earthYearsSinceResult"></p>
-      <p id="earthYearsToResult"></p>
+      <p id="earthYearsTilResult"></p>
     </div>
 
     <div id="planetMarsDiv" class="planetHolder">
@@ -73,7 +73,7 @@
       <h3 class="planetTitle">Mars</h3>
       <p id="marsTextHolder"></p>
       <p id="marsYearsSinceResult"></p>
-      <p id="marsYearsToResult"></p>
+      <p id="marsYearsTilResult"></p>
     </div>
 
     <div id="planetJupiterDiv" class="planetHolder">
@@ -81,7 +81,7 @@
       <h3 class="planetTitle">Jupiter</h3>
       <p id="jupiterTextHolder"></p>
       <p id="jupiterYearsSinceResult"></p>
-      <p id="jupiterYearsToResult"></p>
+      <p id="jupiterYearsTilResult"></p>
     </div>
 
   </div>
