--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,14 @@
 <html>
 
 <head>
+  <link href="https://fonts.cdnfonts.com/css/sf-distant-galaxy" rel="stylesheet">
   <title>Super Galactic Age Calculator!</title>
 </head>
 
 <body>
 
   <div id="formHolder">
-    <h1>Perform Galactic Age Calculations:</h1>
+    <h1 id="title">Super Galactic <br> <span id="largerTitle">Age Calculator</span></h1>
     <form id="enterAgeForm">
       <label for="age-input">Enter your age to get started:</label>
       <input id="age-input" type="number">
