--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <link href="https://fonts.cdnfonts.com/css/sf-distant-galaxy" rel="stylesheet">
+  <!-- <link href="https://fonts.cdnfonts.com/css/sf-distant-galaxy" rel="stylesheet"> -->
   <title>Super Galactic Age Calculator!</title>
 </head>
 
